Update project files

--- a/team.html
+++ b/team.html
@@ -432,7 +432,7 @@
               <p class="member-position">Managing Partner</p>
               <span class="member-admission">Admitted to the Bar: 2014</span>
               <p class="member-bio">
-                grace combines sharp legal acumen with business insight to
+                Grace combines sharp legal acumen with business insight to
                 deliver comprehensive solutions for Individual & corporate
                 clients. Her expertise spans commercial transactions, contract
                 negotiation, and alternative dispute resolution mechanisms.
@@ -459,7 +459,7 @@
               <p class="member-position">Partner</p>
               <span class="member-admission">Admitted to the Bar: 2011</span>
               <p class="member-bio">
-                With over a decade of distinguished legal practice, Faith brings
+                With over a decade of distinguished legal practice, Nyaata brings
                 exceptional expertise in complex litigation,Land Law,
                 Conveyancing & Real Estate Law. Her strategic approach to legal
                 challenges has yielded numerous successful outcomes for clients
@@ -512,7 +512,7 @@
               <h3 class="member-name">Nyaata & Nyaata</h3>
               <p class="member-position">Legal Consultant</p>
               <p class="member-bio">
-                Kelvin's meticulous approach to corporate law and commercial
+                Nyaata's meticulous approach to corporate law and commercial
                 litigation ensures thorough case preparation and strategic
                 advocacy. His dedication to client success is reflected in his
                 consistent track record of favorable outcomes.
@@ -537,7 +537,7 @@
               <h3 class="member-name">Nyaata & Nyaata</h3>
               <p class="member-position">Legal Consultant</p>
               <p class="member-bio">
-                Specializing in real estate law, Eleazor brings extensive
+                Specializing in real estate law, Nyaata brings extensive
                 knowledge of property transactions, title verification, and
                 conveyancing processes. His attention to detail ensures seamless
                 property transfers for clients.
@@ -562,7 +562,7 @@
               <h3 class="member-name">Nyaata & Nyaata</h3>
               <p class="member-position">Executive Administrative Assistant</p>
               <p class="member-bio">
-                Everlyne provides compassionate yet effective assistance to
+                Nyaata provides compassionate yet effective assistance to
                 clients.She is in charge of the day to day adminsitrative duties
                 at the firm. Her empathetic approach helps clients navigate
                 emotionally challenging legal processes.
