Describe your changes here

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html" class="active">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
@@ -105,7 +105,7 @@
       <div class="container">
         <h1>About Our Firm</h1>
         <ul class="breadcrumb">
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li>|</li>
           <li>About Us</li>
         </ul>
@@ -383,7 +383,7 @@
           <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Legal Insights</a></li>
