--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html" class="active">Legal Insights</a></li>
@@ -104,7 +104,7 @@
       <div class="container">
         <h1>Legal Insights & Resources</h1>
         <ul class="breadcrumb">
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li>|</li>
           <li>Blog</li>
         </ul>
@@ -540,7 +540,7 @@
           <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Legal Insights</a></li>
