--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="/" class="active">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
