--- a/naomi-mutinda.html
+++ b/naomi-mutinda.html
@@ -298,7 +298,7 @@
           <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Legal Insights</a></li>
