--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html" class="active">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
@@ -109,7 +109,7 @@
       <div class="container">
         <h1>Our Legal Services</h1>
         <ul class="breadcrumb">
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li>|</li>
           <li>Services</li>
         </ul>
@@ -1018,7 +1018,7 @@
           <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Legal Insights</a></li>
