--- a/single-post.html
+++ b/single-post.html
@@ -87,7 +87,7 @@
     </a>
     <nav aria-label="Main Navigation">
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="categories.html">Categories</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -543,7 +543,7 @@
           <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Legal Insights</a></li>
