--- a/team.html
+++ b/team.html
@@ -211,7 +211,7 @@
 </nav>-->
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
@@ -231,7 +231,7 @@
       <div class="container">
         <h1>Our Legal Team</h1>
         <ul class="breadcrumb">
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li>|</li>
           <li>Our Team</li>
         </ul>
@@ -727,7 +727,7 @@
           <div class="footer-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html" class="active">Home</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="blog.html">Legal Insights</a></li>
