Describe your changes here

--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <meta name="author" content="Maingi Kisilu Company Advocates" />
+  <meta name="author" content="Nyaata & Nyaata Company Advocates" />
   <link rel="author" href="https://musyokamutindaadv.co.ke/humans.txt" />
 
   <!-- Page Title & Description -->
-  <title>About Us | Maingi Kisilu Company Advocates</title>
-  <meta name="description" content="Learn about Maingi Kisilu Company Advocates — our mission, vision, values, and commitment to providing trusted legal services in Kenya. Meet our team of experienced advocates." />
-  <meta name="keywords" content="Maingi Kisilu Advocates, Kenyan law firm, about us, legal services Kenya, litigation, corporate law, real estate, family law, succession" />
+  <title>About Us | Nyaata & Nyaata Company Advocates</title>
+  <meta name="description" content="Learn about Nyaata & Nyaata Company Advocates — our mission, vision, values, and commitment to providing trusted legal services in Kenya. Meet our team of experienced advocates." />
+  <meta name="keywords" content="Nyaata & Nyaata Advocates, Kenyan law firm, about us, legal services Kenya, litigation, corporate law, real estate, family law, succession" />
   <link rel="canonical" href="https://musyokamutindaadv.co.ke/about.html" />
 
   <!-- Favicons & App Icons -->
@@ -22,22 +22,22 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="About Us | Maingi Kisilu Company Advocates" />
-  <meta property="og:description" content="Discover our mission, vision, values, and legal expertise. Maingi Kisilu Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya." />
+  <meta property="og:title" content="About Us | Nyaata & Nyaata Company Advocates" />
+  <meta property="og:description" content="Discover our mission, vision, values, and legal expertise. Nyaata & Nyaata Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya." />
   <meta property="og:url" content="https://musyokamutindaadv.co.ke/about.html" />
   <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta property="og:image:alt" content="Maingi Kisilu Advocates favicon" />
+  <meta property="og:image:alt" content="Nyaata & Nyaata Advocates favicon" />
   <meta property="og:image:width" content="512" />
   <meta property="og:image:height" content="512" />
-  <meta property="og:site_name" content="Maingi Kisilu Company Advocates" />
+  <meta property="og:site_name" content="Nyaata & Nyaata Company Advocates" />
   <meta property="og:locale" content="en_KE" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About Us | Maingi Kisilu Company Advocates" />
-  <meta name="twitter:description" content="Learn about our mission, vision, values, and legal expertise. Maingi Kisilu Advocates provide dependable legal services in Kenya." />
+  <meta name="twitter:title" content="About Us | Nyaata & Nyaata Company Advocates" />
+  <meta name="twitter:description" content="Learn about our mission, vision, values, and legal expertise. Nyaata & Nyaata Advocates provide dependable legal services in Kenya." />
   <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta name="twitter:image:alt" content="Maingi Kisilu Advocates favicon" />
+  <meta name="twitter:image:alt" content="Nyaata & Nyaata Advocates favicon" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -55,7 +55,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "Maingi Kisilu Company Advocates",
+    "name": "Nyaata & Nyaata Company Advocates",
     "url": "https://musyokamutindaadv.co.ke/about.html",
     "favicon": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png",
     "sameAs": [
@@ -63,7 +63,7 @@
       "https://twitter.com/yourhandle",
       "https://www.linkedin.com/company/yourcompany"
     ],
-    "description": "Maingi Kisilu Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya. Our mission, vision, and core values guide our services."
+    "description": "Nyaata & Nyaata Advocates provide dependable and strategic legal solutions for individuals and businesses in Kenya. Our mission, vision, and core values guide our services."
   }
   </script>
 </head>
@@ -76,8 +76,8 @@
       <div class="container header-container">
         <a href="/" class="favicon">
           <img
-            src="Maingi Kisilu favicon.webp"
-            alt="Maingi Kisilu Advocates favicon"
+            src="Nyaata & Nyaata favicon.webp"
+            alt="Nyaata & Nyaata Advocates favicon"
             class="favicon-img"
           />
         </a>
@@ -86,11 +86,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="about.html" class="active">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
-            <li><a href="team.html" >Our Team</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li>
               <a href="contact.html" class="btn">Schedule Consultation</a>
@@ -119,7 +118,7 @@
           <div class="about-text">
             <h2>10+ Years of Legal Excellence</h2>
             <p>
-              Founded over a decade ago, Maingi Kisilu Company Advocates
+              Founded over a decade ago, Nyaata & Nyaata Company Advocates
               has established itself as a premier law firm in Kenya.It has
               Branches in Nairobi and Machakos Town. Our firm was
               built on the principle that exceptional legal service should be
@@ -141,7 +140,7 @@
             <a href="contact.html" class="btn">Contact Us Today</a>
           </div>
           <div class="about-image">
-            <img src="Maingi Kisilu favicon.webp" alt="Our Office" />
+            <img src="Nyaata & Nyaata favicon.webp" alt="Our Office" />
           </div>
         </div>
       </div>
@@ -188,15 +187,15 @@
             <div class="member-image">
               <img
                 src="https://media.licdn.com/dms/image/v2/C5603AQELsHjFe2Vpgw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1588633008380?e=1769644800&v=beta&t=qh0X6vlteAl3RJJfQgS0RkvKwrYEEIYF5z7s2pk9axg"
-                alt="Maingi Kisilu– Partner at Maingi Kisilu Company Advocates"
+                alt="Nyaata– Partner at Nyaata & Nyaata Company Advocates"
               />
             </div>
             <div class="member-info">
-              <h3 class="member-name">Adv. Maingi Kisilu</h3>
+              <h3 class="member-name">Adv. Grace Nyaata</h3>
               <p class="member-position">Managing Partner</p>
               <p class="member-bio">
                 With over a decade of experience in litigation and corporate
-                law, Advocate Kisilu brings strategic insight and formidable
+                law, Advocate Nyaata brings strategic insight and formidable
                 advocacy skills to every case. He holds an LLB from the
                 University of Nairobi and was admitted to the Kenyan Bar in
                 2014.
@@ -206,15 +205,15 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="Maingi Kisilu favicon.webp"
-                alt="Faith Musyoka– Partner at Maingi Kisilu Company Advocates"
+                src="Nyaata & Nyaata favicon.webp"
+                alt="Nyaata– Partner at Nyaata & Nyaata Company Advocates"
               />
             </div>
             <div class="member-info">
-              <h3 class="member-name">Adv. Maingi Kisilu</h3>
+              <h3 class="member-name">Adv. Nyaata</h3>
               <p class="member-position">Partner</p>
               <p class="member-bio">
-                Specializing in commercial law and real estate, Advocate Kisilu
+                Specializing in commercial law and real estate, Advocate Nyaata
                 has built a reputation for meticulous preparation and successful
                 negotiation. He graduated with honors from Moi University
                 School of Law and has been practicing since 2011.
@@ -224,7 +223,7 @@
           
         </div>
         <div style="text-align: center; margin-top: 40px">
-          <a href="team.html" class="btn">View Full Team</a>
+          <a href="#" class="btn">View Full Team</a>
         </div>
       </div>
     </section>
@@ -291,7 +290,7 @@
               <div class="timeline-year">2014</div>
               <h3>Firm Establishment</h3>
               <p>
-                Maingi Kisilu Company Advocates was founded with a vision
+                Nyaata & Nyaata Company Advocates was founded with a vision
                 to provide accessible, high-quality legal services to the
                 Machakos community.
               </p>
@@ -363,14 +362,15 @@
     </section>
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
           <div class="footer-about">
             <a href="/" class="footer-favicon">
               <img
-                src="Maingi Kisilu favicon.webp"
-                alt="Maingi Kisilu Advocates favicon"
+                src="Nyaata & Nyaata favicon.webp"
+                alt="Nyaata & Nyaata Advocates favicon"
               />
             </a>
             <p>
@@ -418,26 +418,26 @@
             <ul>
               <li>
                 <i class="fas fa-map-marker-alt"></i
-                ><a href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA">
-                  Mbitini House, First Floor, Machakos</a
+                ><a href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18">
+                  Triple M Complex, First Floor, Machakos</a
                 >
               </li>
              
               <li>
                 <i class="fas fa-phone"></i>
-                <a href="tel:+254710635276"> +254710635276</a>
+                <a href="tel:+254794378915"> +254794378915</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@maingikisiluadv.co.ke">
-                  info@maingikisiluadv.co.ke</a
+                ><a href="mailto:info@nyaataandnyaataadv.co.ke">
+                  info@nyaataandnyaataadv.co.ke</a
                 >
               </li>
             </ul>
           </div>
         </div>
          <div class="copyright">
-                <p>&copy; <span id="y"></span> Maingi Kisilu Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
+                <p>&copy; <span id="y"></span> Nyaata & Nyaata Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
               <script>document.getElementById("y").textContent=new Date().getFullYear()</script>
 
           <p style="margin: 0; font-size: 13px; color: #777">
@@ -455,7 +455,7 @@
       </div>
     </footer>
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/254710635276" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/254794378915" class="whatsapp-float" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
     <script src="about.js"></script>
