--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
-  <meta name="author" content="Maingi Kisilu Advocates" />
+  <meta name="author" content="Nyaata & Nyaata Advocates" />
 
   <!-- Page Title & Description -->
-  <title>Contact Our Legal Team in Kenya | Maingi Kisilu Advocates</title>
-  <meta name="description" content="Reach Maingi Kisilu Advocates for legal consultations, representation, and inquiries in Machakos and across Kenya. Professional, responsive legal support." />
+  <title>Contact Our Legal Team in Kenya | Nyaata & Nyaata Advocates</title>
+  <meta name="description" content="Reach Nyaata & Nyaata Advocates for legal consultations, representation, and inquiries in Machakos and across Kenya. Professional, responsive legal support." />
   
   <!-- Canonical URL -->
   <link rel="canonical" href="https://musyokamutindaadv.co.ke/contact" />
@@ -20,16 +20,16 @@
   <link rel="icon" type="image/png" sizes="512x512" href="favicon-512x512.png" />
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="Contact Maingi Kisilu Advocates – Legal Services in Kenya" />
+  <meta property="og:title" content="Contact Nyaata & Nyaata Advocates – Legal Services in Kenya" />
   <meta property="og:description" content="Get in touch with our law firm for consultations, legal representation, or inquiries. Serving Machakos and clients across Kenya." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://musyokamutindaadv.co.ke/contact" />
   <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
-  <meta property="og:site_name" content="Maingi Kisilu Advocates" />
+  <meta property="og:site_name" content="Nyaata & Nyaata Advocates" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Contact Maingi Kisilu Advocates – Legal Services in Kenya" />
+  <meta name="twitter:title" content="Contact Nyaata & Nyaata Advocates – Legal Services in Kenya" />
   <meta name="twitter:description" content="Get in touch with our law firm for consultations, legal representation, or inquiries. Serving Machakos and clients across Kenya." />
   <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
 
@@ -45,14 +45,14 @@
   {
     "@context": "https://schema.org",
     "@type": "LegalService",
-    "name": "Maingi Kisilu Advocates",
+    "name": "Nyaata & Nyaata Advocates",
     "image": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png",
     "url": "https://musyokamutindaadv.co.ke",
-    "telephone": "+254710635276",
-    "email": "info@maingikisiluadv.co.ke",
+    "telephone": "+254794378915",
+    "email": "info@nyaataandnyaataadv.co.ke",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "Mbitini House, Opposite Kwetu Sacco, First Floor",
+      "streetAddress": "Triple M Complex, Opposite Kwetu Sacco, First Floor",
       "addressLocality": "Machakos Town",
       "addressRegion": "Machakos",
       "postalCode": "",
@@ -70,8 +70,8 @@
       <div class="container header-container">
         <a href="/" class="favicon">
           <img
-            src="Maingi Kisilu favicon.webp"
-            alt="Maingi Kisilu Advocates favicon"
+            src="Nyaata & Nyaata favicon.webp"
+            alt="Nyaata & Nyaata Advocates favicon"
             class="favicon-img"
           />
         </a>
@@ -84,8 +84,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
-            <li><a href="team.html">Our Team</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
+           <li><a href="contact.html" class="active">Contact</a></li>
             <li>
               <a href="contact.html" class="btn">Schedule Consultation</a>
             </li>
@@ -130,9 +129,9 @@
             <h3>Call Us</h3>
             <div class="method-details">
               <p>Speak directly with our legal team during business hours</p>
-              <p><strong>0710 635 276</strong></p>
+              <p><strong>0794 378 915</strong></p>
             </div>
-            <a href="tel:+254710635276" class="btn btn-primary">Call Now</a>
+            <a href="tel:+254794378915" class="btn btn-primary">Call Now</a>
           </div>
 
           <div class="method-card">
@@ -142,10 +141,10 @@
             <h3>WhatsApp</h3>
             <div class="method-details">
               <p>Quick responses via WhatsApp</p>
-              <p><strong>0710 635 276</strong></p>
+              <p><strong>0794 378 915</strong></p>
             </div>
             <a
-              href="https://wa.me/254710635276"
+              href="https://wa.me/254794378915"
               class="btn btn-primary"
               target="_blank"
               >Message Us</a
@@ -162,7 +161,7 @@
               <p><strong></strong></p>
             </div>
             <a
-              href="mailto:info@maingikisiluadv.co.ke"
+              href="mailto:info@nyaataandnyaataadv.co.ke"
               class="btn btn-primary"
               >Send Email</a
             >
@@ -174,11 +173,11 @@
             </div>
             <h3>Visit Our Office</h3>
             <div class="method-details">
-              <p>Come see us in <strong></strong>1st Floor, Mbitini House,</strong>
+              <p>Come see us in <strong></strong>1st Floor, Triple M Complex,</strong>
              Machakos Town</strong></p>
             </div>
             <a
-              href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA"
+              href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18"
               class="btn btn-primary"
               >Get Directions</a
             >
@@ -297,8 +296,8 @@
               <div class="info-content">
                 <h3>Head Office</h3>
                 <p>
-                  <a href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA">
-                    Mbitini House, Machakos Town, Kenya</a
+                  <a href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18">
+                    Triple M Complex, Machakos Town, Kenya</a
                   >    
               </li>
              </p>
@@ -313,8 +312,8 @@
                 <h3>Phone Numbers</h3>
 
                 <p>
-                  Office: <a href="tel:+254710635276">0710 635 276</a
-                  ><br />Emergency: <a href="tel:254710635276">0710 635 276</a>
+                  Office: <a href="tel:+254794378915">0794 378 915</a
+                  ><br />Emergency: <a href="tel:254794378915">0794 378 915</a>
                 </p>
               </div>
             </div>
@@ -325,8 +324,8 @@
               </div>
               <div class="info-content">
                 <h3>Email Address</h3>
-                <a href="mailto:info@maingikisiluadv.co.ke"
-                  >info@maingikisiluadv.co.ke
+                <a href="mailto:info@nyaataandnyaataadv.co.ke"
+                  >info@nyaataandnyaataadv.co.ke
                 </a>
               </div>
             </div>
@@ -382,8 +381,7 @@
         <div class="map-container">
           <div class="map-placeholder">
             <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3988.416334279933!2d37.26400212496601!3d-1.5189575484668056!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f80cd7890b659%3A0xc6096409f7b67f3!2sMakamithi%20Enterprises%20Ltd!5e0!3m2!1sen!2ske!4v1768065668701!5m2!1sen!2ske" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
-          </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.4148593110704!2d37.269476999999995!3d-1.5197564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f80ccb129873b%3A0xcbce9788ba8087b9!2sTripple.%20M.%20Complex!5e0!3m2!1sen!2ske!4v1768852188809!5m2!1sen!2ske" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
         </div>
       </div>
     </section>
@@ -406,7 +404,7 @@
               <p>
                 We strive to respond to all inquiries within 24 hours during
                 business days. For urgent matters, we recommend calling our
-                office directly at +254710635276.
+                office directly at +254794378915.
               </p>
             </div>
           </div>
@@ -448,7 +446,7 @@
             </div>
             <div class="faq-answer">
               <p>
-                Yes, Mbitini House, offers ample parking space for our clients.
+                Yes, Triple M Complex, offers ample parking space for our clients.
                 There is both street parking and a dedicated parking lot
                 available.
               </p>
@@ -468,13 +466,13 @@
         </p>
         <div class="cta-btns">
           <div>
-            <a href="tel:+254710635276" class="method-icon"
+            <a href="tel:+254794378915" class="method-icon"
               ><i class="fas fa-phone-alt"></i
             ></a>
           </div>
           <div>
             <a
-              href="https://wa.me/254710635276"
+              href="https://wa.me/254794378915"
               class="method-icon"
               id="whatsapp"
               target="_blank"
@@ -488,15 +486,15 @@
 
     <!-- Footer -->
 
-    <!-- Footer -->
+     <!-- Footer -->
     <footer>
       <div class="container">
         <div class="footer-content">
           <div class="footer-about">
             <a href="/" class="footer-favicon">
               <img
-                src="Maingi Kisilu favicon.webp"
-                alt="Maingi Kisilu Advocates favicon"
+                src="Nyaata & Nyaata favicon.webp"
+                alt="Nyaata & Nyaata Advocates favicon"
               />
             </a>
             <p>
@@ -544,26 +542,26 @@
             <ul>
               <li>
                 <i class="fas fa-map-marker-alt"></i
-                ><a href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA">
-                  Mbitini House, First Floor, Machakos</a
+                ><a href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18">
+                  Triple M Complex, First Floor, Machakos</a
                 >
               </li>
              
               <li>
                 <i class="fas fa-phone"></i>
-                <a href="tel:+254710635276"> +254710635276</a>
+                <a href="tel:+254794378915"> +254794378915</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@maingikisiluadv.co.ke">
-                  info@maingikisiluadv.co.ke</a
+                ><a href="mailto:info@nyaataandnyaataadv.co.ke">
+                  info@nyaataandnyaataadv.co.ke</a
                 >
               </li>
             </ul>
           </div>
         </div>
          <div class="copyright">
-                <p>&copy; <span id="y"></span> Maingi Kisilu Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
+                <p>&copy; <span id="y"></span> Nyaata & Nyaata Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
               <script>document.getElementById("y").textContent=new Date().getFullYear()</script>
 
           <p style="margin: 0; font-size: 13px; color: #777">
@@ -581,7 +579,7 @@
       </div>
     </footer>
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/254710635276" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/254794378915" class="whatsapp-float" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
 
