--- a/services.html
+++ b/services.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Page Title -->
-  <title>Legal Services in Kenya | Maingi Kisilu Advocates</title>
+  <title>Legal Services in Kenya | Nyaata & Nyaata Advocates</title>
 
   <!-- Meta Description -->
   <meta name="description" content="Providing professional legal services in Kenya including Conveyancing, Corporate Law, Litigation, Probate, Family Law, and Legal Compliance. Trusted lawyers delivering expert advice and representation." />
 
   <!-- Keywords -->
-  <meta name="keywords" content="legal services Kenya, corporate law, conveyancing, litigation, probate, family law, legal advice, legal representation, Maingi Kisilu Advocates" />
+  <meta name="keywords" content="legal services Kenya, corporate law, conveyancing, litigation, probate, family law, legal advice, legal representation, Nyaata & Nyaata Advocates" />
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://musyokamutindaadv.co.ke/services" />
@@ -24,17 +24,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Legal Services in Kenya | Maingi Kisilu Advocates" />
+  <meta property="og:title" content="Legal Services in Kenya | Nyaata & Nyaata Advocates" />
   <meta property="og:description" content="Providing professional legal services in Kenya including Corporate Law, Litigation, Conveyancing, Family Law, Probate, and Compliance. Trusted legal counsel you can rely on." />
   <meta property="og:url" content="https://musyokamutindaadv.co.ke/services" />
-  <meta property="og:site_name" content="Maingi Kisilu Advocates" />
+  <meta property="og:site_name" content="Nyaata & Nyaata Advocates" />
   <meta property="og:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
   <meta property="og:image:width" content="512" />
   <meta property="og:image:height" content="512" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Legal Services in Kenya | Maingi Kisilu Advocates" />
+  <meta name="twitter:title" content="Legal Services in Kenya | Nyaata & Nyaata Advocates" />
   <meta name="twitter:description" content="Expert legal services in Kenya including Corporate Law, Litigation, Conveyancing, Family Law, Probate, and Compliance. Trusted and reliable legal counsel." />
   <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/full-favicon-512x512.png" />
   <meta name="twitter:site" content="@MusyokaMutinda" />
@@ -58,7 +58,7 @@
       "name": "How do I schedule a consultation with your firm?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Call +254710635276, email info@maingikisiluadv.co.ke, or use the contact form."
+        "text": "Call +254794378915, email info@nyaataandnyaataadv.co.ke, or use the contact form."
       }
     },
     {
@@ -80,8 +80,8 @@
       <div class="container header-container">
         <a href="/" class="favicon">
           <img
-            src="Maingi Kisilu favicon.webp"
-            alt="Maingi Kisilu Advocates favicon"
+            src="Nyaata & Nyaata favicon.webp"
+            alt="Nyaata & Nyaata Advocates favicon"
             class="favicon-img"
           />
         </a>
@@ -90,11 +90,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html" class="active">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
-            <li><a href="team.html" >Our Team</a></li>
+            
             <li><a href="contact.html">Contact</a></li>
             <li>
               <a href="contact.html" class="btn">Schedule Consultation</a>
@@ -319,8 +319,8 @@
               </ul>
               <h4>Need Immediate Assistance?</h4>
               <p>Contact us for urgent legal matters:</p>
-              <p><strong>Phone:</strong> +254710635276</p>
-              <p><strong>Email:</strong> info@maingikisiluadv.co.ke</p>
+              <p><strong>Phone:</strong> +254794378915</p>
+              <p><strong>Email:</strong> info@nyaataandnyaataadv.co.ke</p>
             </div>
           </div>
         </div>
@@ -602,7 +602,7 @@
               </ul>
               <h4>Emergency Legal Help</h4>
               <p>
-                <strong>Call:</strong> +254710635276 for immediate legal
+                <strong>Call:</strong> +254794378915 for immediate legal
                 assistance.
               </p>
             </div>
@@ -683,7 +683,7 @@
               </ul>
               <h4>Emergency Legal Help</h4>
               <p>
-                <strong>Call:</strong> +254710635276 for immediate legal
+                <strong>Call:</strong> +254794378915 for immediate legal
                 assistance.
               </p>
             </div>
@@ -767,7 +767,7 @@
               </ul>
               <h4>Emergency Legal Help</h4>
               <p>
-                <strong>Call:</strong> +254710635276 for immediate legal
+                <strong>Call:</strong> +254794378915 for immediate legal
                 assistance.
               </p>
             </div>
@@ -920,9 +920,9 @@
           <div class="faq-answer">
             <p>
               You can schedule a consultation by calling us at
-              <a href="tel:+254710635276">+254710635276</a>, emailing
-              <a href="mailto:info@maingikisiluadv.co.ke"
-                >info@maingikisiluadv.co.ke</a
+              <a href="tel:+254794378915">+254794378915</a>, emailing
+              <a href="mailto:info@nyaataandnyaataadv.co.ke"
+                >info@nyaataandnyaataadv.co.ke</a
               >, or using the contact form on our website. We typically respond
               within 24 hours to arrange a meeting at our office or via video
               conference.
@@ -1004,8 +1004,8 @@
           <div class="footer-about">
             <a href="/" class="footer-favicon">
               <img
-                src="Maingi Kisilu favicon.webp"
-                alt="Maingi Kisilu Advocates favicon"
+                src="Nyaata & Nyaata favicon.webp"
+                alt="Nyaata & Nyaata Advocates favicon"
               />
             </a>
             <p>
@@ -1053,26 +1053,26 @@
             <ul>
               <li>
                 <i class="fas fa-map-marker-alt"></i
-                ><a href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA">
-                  Mbitini House, First Floor, Machakos</a
+                ><a href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18">
+                  Triple M Complex, First Floor, Machakos</a
                 >
               </li>
              
               <li>
                 <i class="fas fa-phone"></i>
-                <a href="tel:+254710635276"> +254710635276</a>
+                <a href="tel:+254794378915"> +254794378915</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@maingikisiluadv.co.ke">
-                  info@maingikisiluadv.co.ke</a
+                ><a href="mailto:info@nyaataandnyaataadv.co.ke">
+                  info@nyaataandnyaataadv.co.ke</a
                 >
               </li>
             </ul>
           </div>
         </div>
          <div class="copyright">
-                <p>&copy; <span id="y"></span> Maingi Kisilu Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
+                <p>&copy; <span id="y"></span> Nyaata & Nyaata Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
               <script>document.getElementById("y").textContent=new Date().getFullYear()</script>
 
           <p style="margin: 0; font-size: 13px; color: #777">
@@ -1090,7 +1090,7 @@
       </div>
     </footer>
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/254710635276" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/254794378915" class="whatsapp-float" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
 
