--- a/naomi-mutinda.html
+++ b/naomi-mutinda.html
@@ -5,35 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>Advocate Maingi Kisilu - High Court Advocate | Managing Partner at Maingi Kisilu Advocates</title>
-  <meta name="description" content="Advocate Maingi Kisilu is a Managing Partner at Maingi Kisilu Company Advocates in Machakos, Kenya. Specializes in litigation, corporate law, conveyancing, family law, and commercial disputes." />
-  <meta name="keywords" content="Advocate Maingi Kisilu, High Court Advocate Kenya, Machakos lawyer, litigation lawyer Kenya, corporate law advocate, conveyancing Kenya, family law attorney, commercial disputes Kenya" />
+  <title>Advocate Nyaata & Nyaata - High Court Advocate | Managing Partner at Nyaata & Nyaata Advocates</title>
+  <meta name="description" content="Advocate Nyaata & Nyaata is a Managing Partner at Nyaata & Nyaata Company Advocates in Machakos, Kenya. Specializes in litigation, corporate law, conveyancing, family law, and commercial disputes." />
+  <meta name="keywords" content="Advocate Nyaata & Nyaata, High Court Advocate Kenya, Machakos lawyer, litigation lawyer Kenya, corporate law advocate, conveyancing Kenya, family law attorney, commercial disputes Kenya" />
   <link rel="canonical" href="https://musyokamutindaadv.co.ke/naomi-mutinda.html" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="profile" />
-  <meta property="og:title" content="Advocate Maingi Kisilu - High Court Advocate | Managing Partner" />
+  <meta property="og:title" content="Advocate Nyaata & Nyaata - High Court Advocate | Managing Partner" />
   <meta property="og:description" content="Experienced High Court Advocate specializing in litigation, corporate law, conveyancing, family law, and commercial disputes in Machakos, Kenya." />
   <meta property="og:url" content="https://musyokamutindaadv.co.ke/naomi-mutinda.html" />
   <meta property="og:image" content="https://musyokamutindaadv.co.ke/naomi-mutinda.jpg" />
-  <meta property="og:image:alt" content="Advocate Maingi Kisilu - High Court Advocate Kenya" />
-  <meta property="og:site_name" content="Maingi Kisilu Company Advocates" />
+  <meta property="og:image:alt" content="Advocate Nyaata & Nyaata - High Court Advocate Kenya" />
+  <meta property="og:site_name" content="Nyaata & Nyaata Company Advocates" />
   <meta property="og:locale" content="en_KE" />
   <meta property="og:profile:first_name" content="Naomi" />
   <meta property="og:profile:last_name" content="Mutinda" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Advocate Maingi Kisilu - High Court Advocate | Managing Partner" />
-  <meta name="twitter:description" content="Managing Partner at Maingi Kisilu Company Advocates specializing in litigation, corporate law, and conveyancing in Machakos, Kenya." />
+  <meta name="twitter:title" content="Advocate Nyaata & Nyaata - High Court Advocate | Managing Partner" />
+  <meta name="twitter:description" content="Managing Partner at Nyaata & Nyaata Company Advocates specializing in litigation, corporate law, and conveyancing in Machakos, Kenya." />
   <meta name="twitter:image" content="https://musyokamutindaadv.co.ke/naomi-mutinda.jpg" />
-  <meta name="twitter:image:alt" content="Advocate Maingi Kisilu professional portrait" />
+  <meta name="twitter:image:alt" content="Advocate Nyaata & Nyaata professional portrait" />
   <meta name="twitter:site" content="@MusyokaMutinda" />
   <meta name="twitter:creator" content="@MusyokaMutinda" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <meta name="author" content="Maingi Kisilu Company Advocates" />
+  <meta name="author" content="Nyaata & Nyaata Company Advocates" />
   <link rel="author" href="https://musyokamutindaadv.co.ke/humans.txt" />
 
   <!-- Geo Tags -->
@@ -71,21 +71,21 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "Maingi Kisilu",
+    "name": "Nyaata & Nyaata",
     "jobTitle": "Advocate of the High Court of Kenya",
     "hasOccupation": {
       "@type": "Occupation",
       "name": "High Court Advocate",
       "description": "Experienced in litigation, corporate law, conveyancing, family law, and commercial disputes."
     },
-    "description": "Managing Partner at Maingi Kisilu Company Advocates specializing in litigation, corporate law, conveyancing, and family law.",
+    "description": "Managing Partner at Nyaata & Nyaata Company Advocates specializing in litigation, corporate law, conveyancing, and family law.",
     "url": "https://musyokamutindaadv.co.ke/naomi-mutinda.html",
     "image": "https://musyokamutindaadv.co.ke/naomi-mutinda.jpg",
     "email": "mailto:info@musyokamutindaadv.co.ke",
     "sameAs": ["https://www.linkedin.com/in/naomi-mutinda-aa12982a/"],
     "affiliation": {
       "@type": "LegalService",
-      "name": "Maingi Kisilu Company Advocates",
+      "name": "Nyaata & Nyaata Company Advocates",
       "url": "https://musyokamutindaadv.co.ke/",
       "address": {
         "@type": "PostalAddress",
@@ -104,7 +104,7 @@
     },
     "workLocation": {
       "@type": "Place",
-      "name": "Maingi Kisilu Company Advocates Offices",
+      "name": "Nyaata & Nyaata Company Advocates Offices",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Machakos Town",
@@ -124,8 +124,8 @@
   <!-- ================= HEADER ================= -->
   <header>
     <div class="container header-container">
-      <a href="..//" class="favicon" aria-label="Maingi Kisilu Advocates Home">
-        <img src="Maingi Kisilu favicon.webp" alt="Maingi Kisilu Company Advocates favicon - Legal Services in Machakos Kenya" width="200" height="60" />
+      <a href="..//" class="favicon" aria-label="Nyaata & Nyaata Advocates Home">
+        <img src="Nyaata & Nyaata favicon.webp" alt="Nyaata & Nyaata Company Advocates favicon - Legal Services in Machakos Kenya" width="200" height="60" />
       </a>
 
       <nav aria-label="Main navigation">
@@ -149,13 +149,13 @@
   <div class="breadcrumb container">
     <a href="..//">Home</a> &gt; 
     <a href="../team.html">Our Team</a> &gt; 
-    <span>Adv. Maingi Kisilu</span>
+    <span>Adv. Nyaata & Nyaata</span>
   </div>
 
   <!-- ================= HERO ================= -->
   <section class="hero" role="banner">
     <div class="container">
-      <h1>Adv. Maingi Kisilu</h1>
+      <h1>Adv. Nyaata & Nyaata</h1>
       <p>Advocate of the High Court of Kenya & Managing Partner</p>
     </div>
   </section>
@@ -165,20 +165,20 @@
     <div class="container">
       <article id="naomi-mutinda" class="about-content" itemscope itemtype="https://schema.org/Person">
         <div>
-          <h1 id="profile-heading" itemprop="name">Adv. Maingi Kisilu</h1>
+          <h1 id="profile-heading" itemprop="name">Adv. Nyaata & Nyaata</h1>
           <h2 itemprop="jobTitle">Advocate of the High Court of Kenya</h2>
 
           <p   >
             <strong itemprop="affiliation">
-              Maingi Kisilu Company Advocates
+              Nyaata & Nyaata Company Advocates
             </strong>
-            is a premier Machakos-based law firm where Advocate Maingi Kisilu serves as a
+            is a premier Machakos-based law firm where Advocate Nyaata & Nyaata serves as a
             Managing partner, bringing over a decade of results-driven and client-focused
             legal practice.
           </p>
 
           <p itemprop="description"   >
-            Advocate Maingi Kisilu is an accomplished legal practitioner with extensive
+            Advocate Nyaata & Nyaata is an accomplished legal practitioner with extensive
             expertise in civil and commercial litigation, corporate advisory, property
             conveyancing, and family law matters. Her practice is characterized by
             meticulous attention to detail and a deep commitment to achieving optimal
@@ -199,7 +199,7 @@
 
           <h3 >Professional Background</h3>
           <p   > 
-            Advocate Maingi Kisilu was admitted to the Kenyan Bar in 2014 and has since built
+            Advocate Nyaata & Nyaata was admitted to the Kenyan Bar in 2014 and has since built
             a distinguished career representing clients across various sectors including
             banking, real estate development, manufacturing, and family enterprises.
             Her approach combines legal acumen with practical business understanding.
@@ -229,15 +229,15 @@
                  target="_blank"
                  rel="noopener noreferrer"
                  itemprop="sameAs">
-                Advocate Maingi Kisilu – Professional Profile
+                Advocate Nyaata & Nyaata – Professional Profile
               </a>
             </p>
           </div>
         </div>
 
         <div>
-          <img src="Maingi Kisilu.jpg"
-               alt="Advocate Maingi Kisilu - High Court Advocate in professional attire"
+          <img src="Nyaata & Nyaata.jpg"
+               alt="Advocate Nyaata & Nyaata - High Court Advocate in professional attire"
                itemprop="image"
                width="500"
                height="667"
@@ -278,14 +278,15 @@
   </section>
 
   <!-- ================= FOOTER ================= -->
-   <footer>
+    <!-- Footer -->
+    <footer>
       <div class="container">
         <div class="footer-content">
           <div class="footer-about">
             <a href="/" class="footer-favicon">
               <img
-                src="Maingi Kisilu favicon.webp"
-                alt="Maingi Kisilu Advocates favicon"
+                src="Nyaata & Nyaata favicon.webp"
+                alt="Nyaata & Nyaata Advocates favicon"
               />
             </a>
             <p>
@@ -333,26 +334,26 @@
             <ul>
               <li>
                 <i class="fas fa-map-marker-alt"></i
-                ><a href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA">
+                ><a href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18">
                   Triple M Complex, First Floor, Machakos</a
                 >
               </li>
              
               <li>
                 <i class="fas fa-phone"></i>
-                <a href="tel:+254710635276"> +254710635276</a>
+                <a href="tel:+254794378915"> +254794378915</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@maingikisiluadv.co.ke">
-                  info@maingikisiluadv.co.ke</a
+                ><a href="mailto:info@nyaataandnyaataadv.co.ke">
+                  info@nyaataandnyaataadv.co.ke</a
                 >
               </li>
             </ul>
           </div>
         </div>
          <div class="copyright">
-                <p>&copy; <span id="y"></span> Maingi Kisilu Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
+                <p>&copy; <span id="y"></span> Nyaata & Nyaata Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
               <script>document.getElementById("y").textContent=new Date().getFullYear()</script>
 
           <p style="margin: 0; font-size: 13px; color: #777">
@@ -369,11 +370,10 @@
             </div>
       </div>
     </footer>
-
-  <!-- WhatsApp Button -->
-  <button id="whatsapp-button" aria-label="Contact via WhatsApp">
-    <i class="fab fa-whatsapp" aria-hidden="true"></i>
-  </button>
+    <!-- WhatsApp Float -->
+    <a href="https://wa.me/254794378915" class="whatsapp-float" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
 
   <!-- Main JavaScript -->
   <script>
@@ -392,8 +392,8 @@
     // WhatsApp functionality
     const whatsappBtn = document.getElementById('whatsapp-button');
     whatsappBtn.addEventListener('click', () => {
-      const phoneNumber = '254710635276';
-      const message = encodeURIComponent('Hello, I would like to consult with Advocate Maingi Kisilu.');
+      const phoneNumber = '254794378915';
+      const message = encodeURIComponent('Hello, I would like to consult with Advocate Nyaata & Nyaata.');
       window.open(`https://wa.me/${phoneNumber}?text=${message}`, '_blank');
     });
     
@@ -418,7 +418,7 @@
   {
     "@context": "https://schema.org",
     "@type": "LegalService",
-    "name": "Maingi Kisilu Company Advocates",
+    "name": "Nyaata & Nyaata Company Advocates",
     "url": "https://musyokamutindaadv.co.ke",
     "favicon": "https://musyokamutindaadv.co.ke/final favicon.png",
     "image": "https://musyokamutindaadv.co.ke/https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_350_1400/profile-displaybackgroundimage-shrink_350_1400/0/1676964499754?e=1767225600&v=beta&t=FQyvVD8UBlncp2mKVcAnR952rkn0IksajFlkMZ_65Pc",
@@ -436,12 +436,12 @@
       "latitude": "-1.516667",
       "longitude": "37.266667"
     },
-    "telephone": "+254710635276",
+    "telephone": "+254794378915",
     "openingHours": "Mo-Fr 08:00-17:00",
     "priceRange": "$$",
     "employee": {
       "@type": "Person",
-      "name": "Maingi Kisilu"
+      "name": "Nyaata & Nyaata"
     }
   }
   </script>
