--- a/single-post.html
+++ b/single-post.html
@@ -64,7 +64,7 @@
     },
     "publisher": {
       "@type": "Organization",
-      "name": "Maingi Kisilu Advocates",
+      "name": "Nyaata & Nyaata Advocates",
       "favicon": {
         "@type": "ImageObject",
         "url": "https://musyokamutindaadv.co.ke/full-favicon-512x512.png"
@@ -110,7 +110,7 @@
       <div class="article-content">
         <div class="article-header">
           <div class="article-meta">
-            <span>By Maingi Kisilu, Adv.</span>
+            <span>By Grace Nyaata, Adv.</span>
             <span>May 15, 2019</span>
             <span class="article-category">Contract Law</span>
           </div>
@@ -394,7 +394,7 @@
 
   <blockquote>
     "Land is not just a commodity; it is a heritage. The law exists not to complicate its transfer, but to ensure that the heritage is passed from one hand to another with absolute certainty and peace of mind."
-    <footer>- Adv. Maingi Kisilu</footer>
+    <footer>- Adv. Nyaata & Nyaata</footer>
   </blockquote>
 
   <h2>Common Pitfalls and How to Avoid Them</h2>
@@ -417,7 +417,7 @@
 
   <h2>Conclusion</h2>
   <p>
-    Whether you are a first-time homebuyer or a seasoned commercial developer, the legal landscape of Kenyan land law requires a meticulous approach. At Maingi Kisilu Company Advocates, we prioritize the integrity of your title above all else. Proper legal representation is not an expense; it is the ultimate insurance for your investment.
+    Whether you are a first-time homebuyer or a seasoned commercial developer, the legal landscape of Kenyan land law requires a meticulous approach. At Nyaata & Nyaata Company Advocates, we prioritize the integrity of your title above all else. Proper legal representation is not an expense; it is the ultimate insurance for your investment.
   </p>
 </div>
 
@@ -456,18 +456,18 @@
 
     <img
   src="[https://images.unsplash.com/photo-1505664194779-8beaceb93744?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80](https://images.unsplash.com/photo-1505664194779-8beaceb93744?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80)"
-  alt="Advocate Maingi Kisilu - Family Law and Succession Planning"
+  alt="Advocate Nyaata & Nyaata - Family Law and Succession Planning"
   class="article-image"
 />
 
 <div class="article-body">
   <p>
-    Securing the future of your family requires more than just hard work; it requires a strategic legal framework. <strong>Advocate Maingi Kisilu</strong>, a leading expert in Kenyan Family Law, explores why succession planning is essential for every Kenyan citizen, regardless of the size of their estate.
+    Securing the future of your family requires more than just hard work; it requires a strategic legal framework. <strong>Advocate Nyaata & Nyaata</strong>, a leading expert in Kenyan Family Law, explores why succession planning is essential for every Kenyan citizen, regardless of the size of their estate.
   </p>
 
   <h2>Why Succession Planning Matters</h2>
   <p>
-    In the absence of a clear plan, the transition of assets can lead to prolonged court battles and family disharmony. <strong>Advocate Maingi Kisilu</strong> emphasizes that the Law of Succession Act (Cap 160) provides the guidelines for both testate (with a Will) and intestate (without a Will) proceedings.
+    In the absence of a clear plan, the transition of assets can lead to prolonged court battles and family disharmony. <strong>Advocate Nyaata & Nyaata</strong> emphasizes that the Law of Succession Act (Cap 160) provides the guidelines for both testate (with a Will) and intestate (without a Will) proceedings.
   </p>
 
   
@@ -475,7 +475,7 @@
   <h3>Testate vs. Intestate Succession</h3>
   <ul>
     <li>
-      <strong>Testate Succession:</strong> This occurs when a person leaves a valid Will. <strong>Adv. Maingi Kisilu</strong> advises that a Will allows you to choose your executors and distribute assets exactly as you wish.
+      <strong>Testate Succession:</strong> This occurs when a person leaves a valid Will. <strong>Adv. Nyaata & Nyaata</strong> advises that a Will allows you to choose your executors and distribute assets exactly as you wish.
     </li>
     <li>
       <strong>Intestate Succession:</strong> When one dies without a Will, the law determines how property is shared among the surviving spouse and children, which may not always align with your personal wishes.
@@ -484,24 +484,24 @@
 
   <h2>The Role of a Certified Mediator</h2>
   <p>
-    Family disputes are often emotional and sensitive. As a <strong>Certified Professional Mediator, Maingi Kisilu</strong> often recommends Alternative Dispute Resolution (ADR) to settle estate matters. Mediation saves time, reduces legal costs, and preserves family relationships that traditional litigation might destroy.
+    Family disputes are often emotional and sensitive. As a <strong>Certified Professional Mediator, Nyaata & Nyaata</strong> often recommends Alternative Dispute Resolution (ADR) to settle estate matters. Mediation saves time, reduces legal costs, and preserves family relationships that traditional litigation might destroy.
   </p>
 
   <h3>Key Steps in the Probate Process</h3>
   <ol>
     <li><strong>Filing for a Grant:</strong> Identifying the right person to manage the estate.</li>
     <li><strong>Gazettement:</strong> A 30-day notice period for any creditors or objectors.</li>
-    <li><strong>Confirmation of Grant:</strong> After six months, <strong>Maingi Kisilu</strong> assists clients in applying for the confirmation of the grant to allow for the actual distribution of assets.</li>
+    <li><strong>Confirmation of Grant:</strong> After six months, <strong>Nyaata & Nyaata</strong> assists clients in applying for the confirmation of the grant to allow for the actual distribution of assets.</li>
   </ol>
 
   <blockquote>
     "The greatest gift you can leave your family is not just wealth, but the legal clarity to enjoy that wealth without conflict. Proper estate planning is an act of love."
-    <footer>- Adv. Maingi Kisilu, Managing Partner</footer>
+    <footer>- Adv. Nyaata & Nyaata, Managing Partner</footer>
   </blockquote>
 
   <h2>Protecting Vulnerable Dependants</h2>
   <p>
-    One of the core areas of <strong>Advocate Maingi Kisilu’s</strong> practice is the protection of minors and dependants. Under Kenyan law, even if a Will exists, the court can make "reasonable provision" for dependants who were unfairly left out. 
+    One of the core areas of <strong>Advocate Nyaata & Nyaata’s</strong> practice is the protection of minors and dependants. Under Kenyan law, even if a Will exists, the court can make "reasonable provision" for dependants who were unfairly left out. 
   </p>
 
   <h3>Essential Documents for Succession</h3>
@@ -514,14 +514,15 @@
 
   <h2>Conclusion</h2>
   <p>
-    Succession is not a topic many people like to discuss, but it is a legal necessity. <strong>Advocate Maingi Kisilu</strong> and her team at <strong>Maingi Kisilu Company Advocates</strong> provide compassionate and professional guidance to ensure your legacy is handled with the dignity it deserves.
+    Succession is not a topic many people like to discuss, but it is a legal necessity. <strong>Advocate Nyaata & Nyaata</strong> and her team at <strong>Nyaata & Nyaata Company Advocates</strong> provide compassionate and professional guidance to ensure your legacy is handled with the dignity it deserves.
   </p>
   
   <p>
-    For a confidential consultation on Wills, Probate, or Mediation, contact <strong>Advocate Maingi Kisilu</strong> at our Machakos offices today.
+    For a confidential consultation on Wills, Probate, or Mediation, contact <strong>Advocate Nyaata & Nyaata</strong> at our Machakos offices today.
   </p>
 </div>
 </article> </div>
+    <!-- Footer -->
     <!-- Footer -->
     <footer>
       <div class="container">
@@ -529,8 +530,8 @@
           <div class="footer-about">
             <a href="/" class="footer-favicon">
               <img
-                src="Maingi Kisilu favicon.webp"
-                alt="Maingi Kisilu Advocates favicon"
+                src="Nyaata & Nyaata favicon.webp"
+                alt="Nyaata & Nyaata Advocates favicon"
               />
             </a>
             <p>
@@ -578,26 +579,26 @@
             <ul>
               <li>
                 <i class="fas fa-map-marker-alt"></i
-                ><a href="https://maps.app.goo.gl/bQXJiD5MvQAobW3GA">
-                  Mbitini House, First Floor, Machakos</a
+                ><a href="https://maps.app.goo.gl/hemxrSuNFzwSFpb18">
+                  Triple M Complex, First Floor, Machakos</a
                 >
               </li>
              
               <li>
                 <i class="fas fa-phone"></i>
-                <a href="tel:+254710635276"> +254710635276</a>
+                <a href="tel:+254794378915"> +254794378915</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i
-                ><a href="mailto:info@maingikisiluadv.co.ke">
-                  info@maingikisiluadv.co.ke</a
+                ><a href="mailto:info@nyaataandnyaataadv.co.ke">
+                  info@nyaataandnyaataadv.co.ke</a
                 >
               </li>
             </ul>
           </div>
         </div>
          <div class="copyright">
-                <p>&copy; <span id="y"></span> Maingi Kisilu Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
+                <p>&copy; <span id="y"></span> Nyaata & Nyaata Advocates. All rights reserved. | <a href="#" style="color:rgb(47, 255, 158);">Privacy Policy</a> | <a href="#" style="color:rgb(47, 255, 158);">Terms of Service</a></p>
               <script>document.getElementById("y").textContent=new Date().getFullYear()</script>
 
           <p style="margin: 0; font-size: 13px; color: #777">
@@ -615,7 +616,7 @@
       </div>
     </footer>
     <!-- WhatsApp Float -->
-    <a href="https://wa.me/254710635276" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/254794378915" class="whatsapp-float" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
   </body>
