Styled admin link and fixed it to top-left corner

--- a/single-post.html
+++ b/single-post.html
@@ -496,7 +496,7 @@
 
   <blockquote>
     "The greatest gift you can leave your family is not just wealth, but the legal clarity to enjoy that wealth without conflict. Proper estate planning is an act of love."
-    <footer>- Adv. Nyaata & Nyaata, Managing Partner</footer>
+    <footer>- Adv. Grace Nyaata, Managing Partner</footer>
   </blockquote>
 
   <h2>Protecting Vulnerable Dependants</h2>
